--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,13 +1,13 @@
 spring:
   application:
     name=discodeit
-  mvc:
-    static-path-pattern: /static/**
-  web:
-    resources:
-      static-locations:
-        - classpath:/static/
-        - file:./uploads/
+#  mvc:
+#    static-path-pattern: /static/**
+#  web:
+#    resources:
+#      static-locations:
+#        - classpath:/static/
+#        - file:./uploads/
 
 discodeit:
   repository:
