feature: 의존성 추가

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,10 +5,32 @@ spring:
     multipart:
       max-file-size: 50MB
       max-request-size: 50MB
+  datasource:
+    url: jdbc:postgresql://localhost:5432/discodeit
+    username: discodeit_user
+    password: discodeit1234
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: update
+  properties:
+    hibernate:
+      format_sql: true  # SQL 쿼리 포맷팅
+      use_sql_comments: true  # SQL 쿼리에 주석 추가
 
 server:
   tomcat:
     max-http-form-post-size: 50MB
+
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: debug  # SQL 쿼리 로깅
+        type:
+          descriptor:
+            sql: trace  # SQL 파라미터 값 로깅
 
 discodeit:
   repository:
