--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -36,6 +36,6 @@ discodeit:
   storage:
     type: local
     local:
-      root-path: /path/to/storage
+      root-path: .discodeit/data
 
 spring.web.resources.static-locations: classpath:/static/
