feature: basic user service에 대한 단위 테스트

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -38,4 +38,40 @@ discodeit:
     local:
       root-path: .discodeit/data
 
-spring.web.resources.static-locations: classpath:/static/
+# Actuator 설정
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics,loggers
+  endpoint:
+    health:
+      show-details: always
+  info:
+    env:
+      enabled: true
+    java:
+      enabled: true
+
+# 애플리케이션 정보 설정
+info:
+  application:
+    name: Discodeit
+    version: 1.7.0
+  java:
+    version: ${java.version}
+  spring:
+    boot:
+      version: 3.4.0
+  config:
+    datasource:
+      url: ${spring.datasource.url}
+      driver-class-name: ${spring.datasource.driver-class-name}
+    jpa:
+      ddl-auto: ${spring.jpa.hibernate.ddl-auto}
+    storage:
+      type: ${storage.type}
+      path: ${storage.path}
+    multipart:
+      max-file-size: ${spring.servlet.multipart.max-file-size}
+      max-request-size: ${spring.servlet.multipart.max-request-size}
