feature: 애플리케이션 컨테이너화 요구사항 완료

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.sprint.mission'
-version = '1.2-M8'
+version = '1.2-M8' // project version
 
 java {
     toolchain {
@@ -56,4 +56,9 @@ jacocoTestReport {
         xml.required = true
         html.required = true
     }
+}
+
+bootJar {
+    archiveBaseName.set("discodeit")
+    archiveVersion.set("1.2-M8")
 }
