--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,12 @@ bin/
 
 ### Discodeit ###
 .discodeit
+.discodeit/storage/
 
 ### 숨김 파일 ###
 .*
 !.gitignore
+
+# Local env files (if any, should be managed via runtime env vars)
+.env
+discodeit.env
