feature: 이미지 최적화하기, github actions를 활용한 ci cd 파이프 라인 구축

--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,12 @@ tasks.named('test') {
 }
 
 test {
+    useJUnitPlatform()
     finalizedBy jacocoTestReport
+}
+
+jacoco {
+    toolVersion = "0.8.11"
 }
 
 jacocoTestReport {
