feature: cd 파이프라인 구축

--- a/github/workflows/deploy.yml
+++ b/github/workflows/deploy.yml
@@ -1,9 +1,12 @@
 name: deploy to ecs on release push
 
 on:
-  push:
-    branches:
-      - release
+  workflow_dispatch:
+
+#on:
+#  push:
+#    branches:
+#      - release
 
 jobs:
   build-and-deploy:
