feature: deploy.yml, test.yml 파일 추가

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,8 @@ bin/
 ### 숨김 파일 ###
 .*
 !.gitignore
+!.github/
+!.github/workflows/
 
 # Local env files (if any, should be managed via runtime env vars)
 .env
