refactor: CI/CD test, deploy 조건 설정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,11 +2,9 @@ name: deploy to ecs on release push
 
 on:
   workflow_dispatch:
-
-#on:
-#  push:
-#    branches:
-#      - release
+  push:
+    branches:
+      - release
 
 jobs:
   build-and-deploy:
