feat: base code 로 교체

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.sprint.mission'
-version = '1.2-M8' // project version
+version = '2.2-M10'
 
 java {
     toolchain {
@@ -18,6 +18,9 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+    testCompileOnly {
+        extendsFrom testAnnotationProcessor
+    }
 }
 
 repositories {
@@ -25,35 +28,25 @@ repositories {
 }
 
 dependencies {
-    dependencies {
-        // --- Spring Boot Core & Web ---
-        implementation 'org.springframework.boot:spring-boot-starter-web'
-        implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'software.amazon.awssdk:s3:2.31.7'
+    runtimeOnly 'org.postgresql:postgresql'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
-        // --- Data Persistence & Database ---
-        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-        runtimeOnly 'org.postgresql:postgresql'
-        testImplementation 'com.h2database:h2'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.mapstruct:mapstruct:1.6.3'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
 
-        // --- Input Validation ---
-        implementation 'org.springframework.boot:spring-boot-starter-validation'
-
-        // --- AWS S3 Integration ---
-        implementation 'software.amazon.awssdk:s3:2.25.48'
-
-        // --- API Documentation ---
-        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
-
-        // --- Developer Tools (Compile Time) ---
-        compileOnly 'org.projectlombok:lombok'
-        annotationProcessor 'org.projectlombok:lombok'
-        implementation 'org.mapstruct:mapstruct:1.5.5.Final'
-        annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
-
-        // --- Testing ---
-        testImplementation 'org.springframework.boot:spring-boot-starter-test'
-        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    }
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'com.h2database:h2'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
@@ -61,12 +54,7 @@ tasks.named('test') {
 }
 
 test {
-    useJUnitPlatform()
     finalizedBy jacocoTestReport
-}
-
-jacoco {
-    toolVersion = "0.8.11"
 }
 
 jacocoTestReport {
@@ -75,9 +63,4 @@ jacocoTestReport {
         xml.required = true
         html.required = true
     }
-}
-
-bootJar {
-    archiveBaseName.set("discodeit")
-    archiveVersion.set("1.2-M8")
 }
