--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,52 @@
-services:
-  db:
-    image: postgres:15
-    container_name: discodeit-db-dev
-    environment:
-      POSTGRES_DB: ${DB_NAME}
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      TZ: Asia/Seoul
-    ports:
-      - "${DB_PORT}:5432" # HOST_PORT : CONTAINER_PORT
-    volumes:
-      - db_data:/var/lib/postgresql/data # postgres 컨테이너가 실제로 데이터베이스 파일을 저장하는 내부 경로
-      - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql # 서비스 실행 후 schema.sql이 자동으로 실행 되도록 구성
-    networks:
-      - discodeit-network
+version: '3.8'
 
-  # 애플리케이션 서비스
+services:
   app:
+    image: discodeit:local
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: discodeit-app-dev
-    environment:
-      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
-      SPRING_DATASOURCE_URL: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-      SPRING_DATASOURCE_USERNAME: ${DB_USER}
-      SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD}
-      STORAGE_TYPE: ${STORAGE_TYPE}
+    container_name: discodeit
     ports:
-      - "${APP_PORT}:${APP_PORT}" # 호스트와 컨테이너 포트 매핑 (예: 8080:8080)
-    volumes:
-      - type: bind
-        source: ${APP_STORAGE_PATH} # 호스트 pc의 경로
-        target: /app/storage # 컨테이너 내부 경로
+      - "8081:80"
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/discodeit
+      - SPRING_DATASOURCE_USERNAME=${SPRING_DATASOURCE_USERNAME}
+      - SPRING_DATASOURCE_PASSWORD=${SPRING_DATASOURCE_PASSWORD}
+      - STORAGE_TYPE=s3
+      - STORAGE_LOCAL_ROOT_PATH=.discodeit/storage
+      - AWS_S3_ACCESS_KEY=${AWS_S3_ACCESS_KEY}
+      - AWS_S3_SECRET_KEY=${AWS_S3_SECRET_KEY}
+      - AWS_S3_REGION=${AWS_S3_REGION}
+      - AWS_S3_BUCKET=${AWS_S3_BUCKET}
+      - AWS_S3_PRESIGNED_URL_EXPIRATION=600
     depends_on:
       - db
+    volumes:
+      - binary-content-storage:/app/.discodeit/storage
     networks:
       - discodeit-network
 
-# 이름 있는 볼륨 . docker 가 직접 지정한 위치에 저장함  (/var/lib/docker/volumes/)
-volumes:
-  db_data:
+  db:
+    image: postgres:16-alpine
+    container_name: discodeit-db
+    environment:
+      - POSTGRES_DB=discodeit
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+      - ./src/main/resources/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+    networks:
+      - discodeit-network
 
-# 네트워크 정의 (서비스들이 동일 네트워크 상에서 통신하도록)
+volumes:
+  postgres-data:
+  binary-content-storage:
+
 networks:
   discodeit-network:
-    driver: bridge
+    driver: bridge 
